index html table

--- a/git/css/html_basic/index.html
+++ b/git/css/html_basic/index.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
 <html lang>
     <head>
-        <title>My Webpage</title>
+        <title>
+            <h1>My webpage</h1>
+        </title>
     </head>
     <body>
-        <p1>
-            <h1> Paragraph 1</h1>
-        </p1>
-        <p2>
-            <h2> Paragraph 2</h2>
-        </p2>
-        <p3>
-            <h3>Paragraph 3</h3>    
-        </p3>
-        <p4>
-            <a href="https://www.holbertonschool.com/holberton-logo.png"></a>
-        </p4>
+        <header>
+            <ul>
+                <li><a href="../html_basic/tweets.html"></a></li>                
+            </ul>
+        </header>
+        <main>
+            <article>
+                <h2> link</h2>
+                <p>
+                    <a href = https://www.holbertonschool.com/holberton-logo.png ></a>
+                </p> 
+                <p>
+                </p>               
+            </article>
+            <aside>
+                <p>
+                    Placeholder to add comment thread later
+                </p>
+            </aside>
+            <article>
+                <h3>Table</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th><b>Name</b></th>
+                            <th><b>Age</b></th>
+                            <th><b>Country</b></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>                                
+
+        </main>
+        <footer>
+            <p>
+               Made by MARY WANGUI <a href="https://twitter.com/gathoni_zarah" target="_blank">here</a>
+            </p>
+        </footer>
+        
     </body>
 </html>
