--- a/git/css/html_basic/tweets.html
+++ b/git/css/html_basic/tweets.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang>
     <head>
-        <title>My Webpage</title>
+        <title>
+            <h1>Good vibes only</h1>        
+            <h2>One step at a time</h2>
+        </title>
     </head>
     <body>
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">A horse walks into a bar.<br><br>&quot;Hey.&quot; says the bartender.<br><br>&quot;How did you know my order?&quot; replies the horse.</p>&mdash; Skylar ✨ (@Skylar_Lorena) <a href="https://twitter.com/Skylar_Lorena/status/1677578240767021056?ref_src=twsrc%5Etfw">July 8, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <a href = ../html_basic/index.html ></a>
+        <header>
+            <ul>
+                <li><a href=".../html_basic/index.html"></a></li>                
+            </ul>
+        </header>
+        <main>
+            <article>
+                <h3>Tweet</h3>
+                <p>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">A horse walks into a bar.<br><br>&quot;Hey.&quot; says the bartender.<br><br>&quot;How did you know my order?&quot; replies the horse.</p>&mdash; Skylar ✨ (@Skylar_Lorena) <a href="https://twitter.com/Skylar_Lorena/status/1677578240767021056?ref_src=twsrc%5Etfw">July 8, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" ></script>                             
+            </article>
+            <aside>
+                <p>
+                    Placeholder to add comment thread later
+                </p>
+            </aside>                              
+
+        </main>
+        <footer>
+            <p>
+               Made by MARY WANGUI <a href="https://twitter.com/gathoni_zarah" target="_blank">here</a>
+            </p>
+        </footer>        
     </body>
 </html>
